# main_controller

data/: gps_track_20260111_124604.csv
scripts/: gps  gps_to_local.py  gps_track_20260111_124604.csv  input.csv  output.csv  trailhead_run.html
sim_rover_controls_node/: .gitignore  get_telemetry_wrapper.h  output.csv  param.m  rover_param.sldd  rover_sw_pwrtrain_24b.slx  rover_sw_pwrtrain_24b.slxc  rover_sw_pwrtrain_24b.tgz  vesc_uart.h
sim_rover_controls_node/+bus_conv_fcns/+ros2/+busToMsg/: RefCachedMap.mat
sim_rover_controls_node/+bus_conv_fcns/+ros2/+msgToBus/: RefCachedMap.mat
sim_rover_controls_node/rover_sw_pwrtrain_24b_ert_rtw/: MW_target_hardware_resources.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  compileInfo.mat  ert_main.cpp  main.cpp  multiword_types.h  ros2ModelInfo.mat  ros2nodeinterface.cpp  ros2nodeinterface.h  rover_sw_pwrtrain_24b.cpp  rover_sw_pwrtrain_24b_data.cpp  rover_sw_pwrtrain_24b_private.h  rover_sw_pwrtrain_24b_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  slros2_initialize.cpp  slros2_initialize.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h
sim_rover_controls_node/rover_sw_pwrtrain_24b_ert_rtw/tmwinternal/: simulink_cache.xml
sim_rover_controls_node/slprj/_cgxe/rover_sw_pwrtrain_24b/: rover_sw_pwrtrain_24b_Cache.mat
sim_rover_controls_node/slprj/_jitprj/: Y4MmB564zanHlNN1vppobD.l  bF6XKdan7gp7ZqES4yAbGF.l  bF6XKdan7gp7ZqES4yAbGF.mat  fKLl81XOFTKajx0uwUu2OD.l  fKLl81XOFTKajx0uwUu2OD.mat  iWz9L1CB4OPEujDPZQ1MiD.l  jitEngineAccessInfo.mat  mg3YXW9I6jYjrf9V6SsTcD.l  mg3YXW9I6jYjrf9V6SsTcD.mat  s2ar9wketFomNqDsfIvTTxG.l  s2ar9wketFomNqDsfIvTTxG.mat  s3b4VDpmMF2EfHhovgP3p6C.l  s3b4VDpmMF2EfHhovgP3p6C.mat  s5gwl68GCFVcuHAfdz7MBHE.l  s5gwl68GCFVcuHAfdz7MBHE.mat  sAAS2jxrrOhImpf7hFeAD0E.l  sAAS2jxrrOhImpf7hFeAD0E.mat  sAzFSLSbBoQsc2T3pHJfWtG.l  sAzFSLSbBoQsc2T3pHJfWtG.mat  sDFNtfD8r20RdRaqgKfS3pG.l  sDFNtfD8r20RdRaqgKfS3pG.mat  sHo2tLotjbSASZNLKIvqYrB.l  sHo2tLotjbSASZNLKIvqYrB.mat  sIWU7fEfSNTzra5BhT4voPD.l  sIWU7fEfSNTzra5BhT4voPD.mat  sOYc2RQx5dDS9gpu0mQw3sB.l  sOYc2RQx5dDS9gpu0mQw3sB.mat  sR9AzFqNFdtDcmhwwZNKGkD.l  sR9AzFqNFdtDcmhwwZNKGkD.mat  sakb0Av8SWTgLV2Ed6SGzlH.l  sakb0Av8SWTgLV2Ed6SGzlH.mat  sceGz2CDlS3M5vPACKPis2E.l  sceGz2CDlS3M5vPACKPis2E.mat  sgjK6hDVsgq0e8MfNPcfsTG.l  sgjK6hDVsgq0e8MfNPcfsTG.mat  sp4wbo5PsKv9XlFIo9xXw9C.l  sp4wbo5PsKv9XlFIo9xXw9C.mat  swF8f37WTB4k9m9STbA3CVE.l  swF8f37WTB4k9m9STbA3CVE.mat
sim_rover_controls_node/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  s3b4VDpmMF2EfHhovgP3p6C.mat  sAAS2jxrrOhImpf7hFeAD0E.mat  sceGz2CDlS3M5vPACKPis2E.mat  sp4wbo5PsKv9XlFIo9xXw9C.mat
sim_rover_controls_node/slprj/_sfprj/precompile/: 4UusJcpPXhAvpDDGOolZaH.mat  DDXWAuERc4wK6FaVhtymcD.mat  autoInferAccessInfo.mat  dT6LceL0xDgfj3NlwV1JRG.mat  liaHpuMASUyM8RsxXNbNiB.mat  rgsteJr3bbPV9M00gUNLXF.mat  ri8jVDg1wVV8UAnFCmlWkD.mat
sim_rover_controls_node/slprj/_sfprj/rover_sw_pwrtrain_24b/: amsi_serial.mat
sim_rover_controls_node/slprj/ert/_sharedutils/: shared_file.dmr
sim_rover_controls_node/src/rover_sw_pwrtrain_24b/: CMakeLists.txt  package.xml  packageInfo.mat
sim_rover_controls_node/src/rover_sw_pwrtrain_24b/include/rover_sw_pwrtrain_24b/: coder_array.h  multiword_types.h  ros2nodeinterface.h  rover_sw_pwrtrain_24b.h  rover_sw_pwrtrain_24b_private.h  rover_sw_pwrtrain_24b_types.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h  slros2_initialize.h  slros_busmsg_conversion.h  visibility_control.h
sim_rover_controls_node/src/rover_sw_pwrtrain_24b/src/: get_telemetry_wrapper.c  main.cpp  ros2nodeinterface.cpp  rover_sw_pwrtrain_24b.cpp  rover_sw_pwrtrain_24b_data.cpp  rtGetInf.cpp  rt_nonfinite.cpp  slros2_initialize.cpp  vesc_uart.c
software/esp32/ble_module/: ble_module.ino
(+17 files in other folders)
